--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: j832
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.6.0-165.0.dev
 
 dependencies:
-  web: ^1.0.0
+  web: ^1.1.0
 
 dev_dependencies:
-  build_runner: ^2.1.5
-  build_web_compilers: ^4.1.0-beta.0
-  dart_flutter_team_lints: ^3.0.0
+  build_runner: ^2.4.12
+  build_web_compilers: ^4.1.0-beta.1
+  dart_flutter_team_lints: ^3.2.1
