Go back to dumping JSON info

--- a/build.yaml
+++ b/build.yaml
@@ -16,7 +16,7 @@ targets:
                 - --no-strip-wasm
             dart2js:
               args:
-                - --dump-info
+                - --stage=dump-info-all
                 - --no-source-maps
                 - --show-package-warnings
                 - -O4
