--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: j832
 
 environment:
-  sdk: ^3.6.0-165.0.dev
+  sdk: ^3.8.0
 
 dependencies:
   web: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.12
-  build_web_compilers: ^4.1.0-beta.1
+  build_web_compilers: ^4.1.4
   dart_flutter_team_lints: ^3.2.1
